Documentation part 2 and nullable annotations