@@ -10,6 +10,7 @@ import net.minecraft.text.Text;
 import net.minecraft.util.StringIdentifiable;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.World;
+import org.jspecify.annotations.Nullable;
 import org.mtr.MTR;
 import org.mtr.core.data.Station;
 import org.mtr.core.operation.NearbyAreasRequest;
@@ -18,10 +19,12 @@ import org.mtr.core.servlet.OperationProcessor;
 import org.mtr.generated.lang.TranslationProvider;
 import org.mtr.libraries.it.unimi.dsi.fastutil.objects.ObjectImmutableList;
 
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 import java.util.function.Consumer;
 
+/**
+ * Fare collection and player balance management.
+ * Handles ticket barriers, balance tracking via scoreboards, zone-based fares, and fare evasion consequences.
+ */
 public class TicketSystem {
 
 	public static final String BALANCE_OBJECTIVE = "mtr_balance";
@@ -42,7 +45,7 @@ public class TicketSystem {
 			if (stations.isEmpty()) {
 				callback.accept(EnumTicketBarrierOpen.CLOSED);
 			} else {
-				final Station station = stations.get(0);
+				final Station station = stations.getFirst();
 				final boolean isEntering;
 
 				if (isEntrance && isExit) {
@@ -191,7 +194,6 @@ public class TicketSystem {
 			name = nameIn;
 		}
 
-		@Nonnull
 		@Override
 		public String asString() {
 			return name;
